# AsteroidDefender

./: .gitignore  CMakeLists.txt  README.md
assets/: asteroid.blend  asteroid.dae  asteroid.mtl  box.blend  box.dae  command_center.blend  command_center.dae  command_center_lopoly.blend  command_center_lopoly.dae  cube.mtl  cursor.blend  cursor.dae  cursor.mtl  diffuse_lopoly.fs  diffuse_lopoly.vs  diffuse_texture.fs  diffuse_texture_v.glsl  enemy.blend  enemy.dae  enemy.mtl  hub.mtl  miner.blend  miner.dae  models.blend  tower.dae  turret.mtl
assets/miner/: miner.dae
assets/mock/scene1/: scene1.blend
cmake/: canvas.cmake
src/: Camera.cpp  Camera.h  Sprite.h  SpriteConverter.cpp  SpriteConverter.h  SpriteRenderer.cpp  SpriteRenderer.h  World.cpp  World.h  main.cpp
src/ad/: context.hpp  main.cpp  ui_layer.hpp  world_layer.hpp
src/ad/App/: AsteroidDefender.cpp  UserInterface.cpp  UserInterface.h
src/ad/Geometry/: Converters.h  Geometry.cpp  Geometry.h  ModelConverter.cpp  ModelConverter.h  RendererConverter.h  ShaderSourceConverter.cpp  ShaderSourceConverter.h  TextureConverter.cpp  TextureConverter.h
src/ad/Sprites/: SpriteConverter.cpp  SpriteConverter.h  SpriteRenderer.cpp  SpriteRenderer.h
src/ad/World/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  CameraInputController.cpp  CameraInputController.h  ConstructionController.h  Entity.h  FirstPersonCameraController.cpp  FirstPersonCameraController.h  Generator.h  OrbitCameraController.cpp  OrbitCameraController.h  Prefabs.h  Resources.h  TopDownCameraController.cpp  TopDownCameraController.h  World.cpp  World.h
src/ad/World/Systems/: MovementSystem.h  ResourceSystem.h
src/ad/app/: user_interface.cpp  user_interface.h
src/ad/world/: construction_controller.h  entity.h  entity_list.hpp  generator.cpp  generator.h  generator.hpp  prefabs.h  resources.h  world.cpp  world.h
src/ad/world/Systems/: movement_system.h  resource_system.h
tests/ad/world/: entity_tests.cpp  prefabs_tests.cpp  world_tests.cpp
